fix for custom login background not showing below the fold (if window is small enough to have a vertical scroller).

--- a/assets/css/authorizer-login.css
+++ b/assets/css/authorizer-login.css
@@ -2,7 +2,8 @@
 
 /* Login Body */
 body.login {
-	background: url('../images/texture-debut-light.jpg') #fbfbfb;
+	background: #fbfbfb url('../images/texture-debut-light.jpg') repeat-y right top;
+	height: auto;
 }
 
 /* Logo */
